# json2parquet

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  development.txt  requirements.txt  setup.cfg  setup.py
json2parquet/: __init__.py  client.py  helpers.py
src/json2parquet/: __init__.py  client.py  helpers.py
src/json2parquet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py
tests/fixtures/: simple.parquet  simple_json.txt
